# dear_opencv

./: CMakeLists.txt  img_transform.cpp
